# rusoto-config-assume-role-credential

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
